creation compte en cours

--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -4,3 +4,12 @@ authentification.submit=Valider
 authentification.title=Authentification
 authentification.inconnu=Aucun utilisateur trouvé
 authentification.logout=Vous avez été déconnecté
+client.nom=Nom
+client.prenom=Prenom
+client.age=Age
+client.telephone=Telephone
+client.rue=Rue/Avenue/Blvd
+client.codepostal=Code Postal
+client.ville=Ville
+client.pays=Pays
+client.montantmaxi=Montant maximum autorisé
