creation de compte

--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -4,12 +4,15 @@ authentification.submit=Valider
 authentification.title=Authentification
 authentification.inconnu=Aucun utilisateur trouvé
 authentification.logout=Vous avez été déconnecté
+
+inscription.creation=Création de compte
+
 client.nom=Nom
 client.prenom=Prenom
 client.age=Age
 client.telephone=Telephone
-client.rue=Rue/Avenue/Blvd
-client.codepostal=Code Postal
-client.ville=Ville
-client.pays=Pays
-client.montantmaxi=Montant maximum autorisé
+client.adresse.rue=Rue/Avenue/Blvd
+client.adresse.code=Code Postal
+client.adresse.ville=Ville
+client.adresse.pays=Pays
+client.montantMax=Montant maximum autorisé
