06/05: Pages Menus/client et admin. messagesspring accueil.jsp

--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -16,3 +16,16 @@ client.adresse.code=Code Postal
 client.adresse.ville=Ville
 client.adresse.pays=Pays
 client.montantMax=Montant maximum autorisé
+
+accueil.home=Home
+accueil.titre=!!!WINBET!!!
+accueil.regle=Règlement
+accueil.reglesite=Règlement du site
+accueil.inscrire=S'inscrire
+accueil.identifier=S'identifier
+accueil.deconnecter=Se déconnecter
+
+menuClient.consulter=Consulter mon compte
+menuClient.listerencontrepariees=Afficher ma liste de rencontres pariées
+menuClient.listerencontrevenir=Afficher la liste des rencontres à venir
+menuClient.retour=Retour à l'accueil
