--- a/ProjetWinBet/src/messages_en.properties
+++ b/ProjetWinBet/src/messages_en.properties
@@ -14,3 +14,17 @@ client.codepostal=Zip Code
 client.ville=Town
 client.pays=Country
 client.montantmaxi=Maximum amount allowed
+
+
+accueil.home=Home
+accueil.titre=!!!WINBET!!!
+accueil.regle=Rules
+accueil.reglesite=Website rules
+accueil.inscrire=Sign in
+accueil.identifier=Login
+accueil.deconnecter=Logout
+
+menuClient.consulter=Check my account
+menuClient.listerencontrepariees=View my list of bet meetings
+menuClient.listerencontrevenir=Show the list of meetings to come
+menuClient.retour=Back to homepage
