06/07 menuAdmin+Security config ajout 2 pages accès

--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -24,6 +24,7 @@ accueil.reglesite=Règlement du site
 accueil.inscrire=S'inscrire
 accueil.identifier=S'identifier
 accueil.deconnecter=Se déconnecter
+accueil.menu=Mon menu
 
 menuClient.consulter=Consulter mon compte
 menuClient.listerencontrepariees=Afficher ma liste de rencontres pariées
