Commit mi-journée 09/07/2018 CRUD admin terminé

--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -39,3 +39,7 @@ creerRencontre.cote=Cotation
 creerRencontre.dateDebut=Début de la rencontre
 creerRencontre.dateFin=Fin de la rencontre
 
+modifierRencontre.sport=Sport
+modifierRencontre.score=Score
+modifierRencontre.vainqueur=Vainqueur
+
