Message errors email done

--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -43,3 +43,4 @@ modifierRencontre.sport=Sport
 modifierRencontre.score=Score
 modifierRencontre.vainqueur=Vainqueur
 
+error.authentification.email.doublon=Cet email existe déjà
