Commit date en cours

--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -35,11 +35,21 @@ creerRencontre.titre=Formulaire de rencontre
 creerRencontre.choixSport=Selectionner un sport
 creerRencontre.equipe1=Equipe/Joueur n°1
 creerRencontre.equipe2=Equipe/Joueur n°2
-creerRencontre.cote=Cotation
+creerRencontre.cote=Côte
 creerRencontre.dateDebut=Début de la rencontre
 creerRencontre.dateFin=Fin de la rencontre
 
 modifierRencontre.sport=Sport
 modifierRencontre.score=Score
 modifierRencontre.vainqueur=Vainqueur
+
+menuAdmin.sport=Sport
+menuAdmin.equipeDomicile=Equipe Domicile
+menuAdmin.coteDomicile=Côte
+menuAdmin.equipeExterieure=Equipe extérieure
+menuAdmin.coteExterieure=Côte
+menuAdmin.dates=Dates
+menuAdmin.vainqueur=Vainqueur
+menuAdmin.score=Score
+menuAdmin.encours=En cours
 
