Commit fin de journée 09/07/2018 Page rencontre a finaliser (4 types d'erreurs a traiter)

--- a/ProjetWinBet/src/errors_fr.properties
+++ b/ProjetWinBet/src/errors_fr.properties
@@ -1,3 +1,5 @@
 error.client.obligatoire=Ce champ est obligatoire
 error.authentification.obligatoire=Ce champ est obligatoire
 error.authentification.email.malforme=Le format de l'email est incorrect
+
+error.admin.score=Le champ du score final ne peut pas être vide
