--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -43,17 +43,20 @@ modifierRencontre.sport=Sport
 modifierRencontre.score=Score
 modifierRencontre.vainqueur=Vainqueur
 
-<<<<<<< HEAD
+
 menuAdmin.sport=Sport
 menuAdmin.equipeDomicile=Equipe Domicile
 menuAdmin.coteDomicile=Côte
-menuAdmin.equipeExterieure=Equipe extérieure
+menuAdmin.equipeExterieure=Equipe Extérieure
 menuAdmin.coteExterieure=Côte
 menuAdmin.dates=Dates
 menuAdmin.vainqueur=Vainqueur
 menuAdmin.score=Score
 menuAdmin.encours=En cours
 
-=======
+
 error.authentification.email.doublon=Cet email existe déjà
->>>>>>> branch 'develop' of https://github.com/ameliedubos/ProjetWinBet
+error.dateFin=La date de fin est inférieure à la date de début
+error.dateDebut=La date de début est inférieure à la date du jour
+error.dateFinManquante=La date de fin est manquante
+error.dateDebutManquante=La date de début est manquante
