JSP PARIS ENCOURS

--- a/ProjetWinBet/src/errors_fr.properties
+++ b/ProjetWinBet/src/errors_fr.properties
@@ -1,5 +1,6 @@
 error.client.obligatoire=Ce champ est obligatoire
 error.authentification.obligatoire=Ce champ est obligatoire
 error.authentification.email.malforme=Le format de l'email est incorrect
-
-error.admin.score=Le champ du score final ne peut pas être vide
+error.pari.obligatoire=Cette somme ne peut être nulle
+error.pari.somme=Ce champ est obligatoire
+error.pari.vainqueur=Choisir votre équipe
