--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -4,6 +4,7 @@ authentification.submit=Valider
 authentification.title=Authentification
 authentification.inconnu=Aucun utilisateur trouvé
 authentification.logout=Vous avez été déconnecté
+error.authentification.email.doublon=Cet email existe déjà
 
 inscription.creation=Création de compte
 
@@ -35,7 +36,7 @@ creerRencontre.titre=Formulaire de rencontre
 creerRencontre.choixSport=Selectionner un sport
 creerRencontre.equipe1=Equipe/Joueur n°1
 creerRencontre.equipe2=Equipe/Joueur n°2
-creerRencontre.cote=Côte
+creerRencontre.cote=Cotation
 creerRencontre.dateDebut=Début de la rencontre
 creerRencontre.dateFin=Fin de la rencontre
 
@@ -43,20 +44,8 @@ modifierRencontre.sport=Sport
 modifierRencontre.score=Score
 modifierRencontre.vainqueur=Vainqueur
 
-
-menuAdmin.sport=Sport
-menuAdmin.equipeDomicile=Equipe Domicile
-menuAdmin.coteDomicile=Côte
-menuAdmin.equipeExterieure=Equipe Extérieure
-menuAdmin.coteExterieure=Côte
-menuAdmin.dates=Dates
-menuAdmin.vainqueur=Vainqueur
-menuAdmin.score=Score
-menuAdmin.encours=En cours
-
-
-error.authentification.email.doublon=Cet email existe déjà
-error.dateFin=La date de fin est inférieure à la date de début
-error.dateDebut=La date de début est inférieure à la date du jour
-error.dateFinManquante=La date de fin est manquante
-error.dateDebutManquante=La date de début est manquante
+pari.titre.onglet=Pari
+pari.titre=Faites vos jeux
+pari.somme=Somme pariée
+pari.vainqueur=Choix de l'équipe 
+error.pari.somme.excessive=La somme pariée est supérieure au montant maximum
