--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -53,10 +53,11 @@ menuAdmin.dates=Dates
 menuAdmin.vainqueur=Vainqueur
 menuAdmin.score=Score
 menuAdmin.encours=En cours
+menuAdmin.nondebute=Non débutée
+menuAdmin.enattente=En attente du résultat
 
 
 error.authentification.email.doublon=Cet email existe déjà
 error.dateFin=La date de fin est inférieure à la date de début
 error.dateDebut=La date de début est inférieure à la date du jour
-error.dateFinManquante=La date de fin est manquante
-error.dateDebutManquante=La date de début est manquante
+error.memeEquipe=Vous avez sélectionné deux fois la même équipe
