mise à jour jsp pari

--- a/ProjetWinBet/src/errors_fr.properties
+++ b/ProjetWinBet/src/errors_fr.properties
@@ -2,5 +2,5 @@ error.client.obligatoire=Ce champ est obligatoire
 error.authentification.obligatoire=Ce champ est obligatoire
 error.authentification.email.malforme=Le format de l'email est incorrect
 error.pari.obligatoire=Cette somme ne peut être nulle
-error.pari.somme=Ce champ est obligatoire
+error.pari.somme=La somme pariée doit être supérieure à 0
 error.pari.vainqueur=Choisir votre équipe
