JSP Pari Terminée

--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -47,7 +47,7 @@ modifierRencontre.vainqueur=Vainqueur
 
 pari.titre.onglet=Pari
 pari.titre=Faites vos jeux
-pari.somme=Somme pariée
+pari.somme=Somme pariée - Montant maxi: 
 pari.vainqueur=Choix de l'équipe 
 error.pari.somme.excessive=La somme pariée est supérieure au montant maximum
 
