--- a/ProjetWinBet/src/errors_fr.properties
+++ b/ProjetWinBet/src/errors_fr.properties
@@ -1,6 +1,8 @@
 error.client.obligatoire=Ce champ est obligatoire
+error.client.montantMax=Le montant maximum doit etre superieur à 0
 error.authentification.obligatoire=Ce champ est obligatoire
 error.authentification.email.malforme=Le format de l'email est incorrect
 error.pari.obligatoire=Cette somme ne peut être nulle
 error.pari.somme=La somme pariée doit être supérieure à 0
 error.pari.vainqueur=Choisir votre équipe
+
