--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -46,7 +46,7 @@ modifierRencontre.vainqueur=Vainqueur
 
 
 pari.titre.onglet=Pari
-pari.titre=Faites vos jeux
+pari.titre=Faites vos paris
 pari.somme=Somme pariée - Montant maxi: 
 pari.vainqueur=Choix de l'équipe 
 error.pari.somme.excessive=La somme pariée est supérieure au montant maximum
