Commit page liste rencontres pariees terminees

--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -70,3 +70,18 @@ error.dateFin=La date de fin est inférieure à la date de début
 error.dateDebut=La date de début est inférieure à la date du jour
 error.memeEquipe=Vous avez sélectionné deux fois la même équipe
 
+rencontrePariees.sport=Sport
+rencontrePariees.equipeDomicile=Equipe Domicile
+rencontrePariees.coteDomicile=Côte
+rencontrePariees.equipeExterieure=Equipe Extérieure
+rencontrePariees.coteExterieure=Côte
+rencontrePariees.dates=Dates
+rencontrePariees.vainqueur=Vainqueur
+rencontrePariees.score=Score
+rencontrePariees.somme=Somme pariée
+rencontrePariees.choixVainqueur=Choix du vainqueur
+rencontrePariees.resuPari=Résultat du pari
+rencontrePariees.gagne=Pari gagné! :)
+rencontrePariees.perdu=Pari perdu :(
+rencontrePariees.gainPari=Vos gains
+rencontrePariees.devise=\u20AC
