10/07 mise en forme all jsp

--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -5,6 +5,7 @@ authentification.title=Authentification
 authentification.inconnu=Aucun utilisateur trouvé
 authentification.logout=Vous avez été déconnecté
 error.authentification.email.doublon=Cet email existe déjà
+authentification.retour=Retour à l'accueil
 
 inscription.creation=Création de compte
 
@@ -32,11 +33,12 @@ menuClient.listerencontrepariees=Afficher ma liste de rencontres pariées
 menuClient.listerencontrevenir=Afficher la liste des rencontres à venir
 menuClient.retour=Retour à l'accueil
 
-creerRencontre.titre=Formulaire de rencontre
+creerRencontre.titre=Créer une rencontre
 creerRencontre.choixSport=Selectionner un sport
-creerRencontre.equipe1=Equipe/Joueur n°1
-creerRencontre.equipe2=Equipe/Joueur n°2
-creerRencontre.cote=Cotation
+creerRencontre.equipe1=Equipe Domicile
+creerRencontre.equipe2=Equipe Extérieure
+creerRencontre.coteDomicile=Côte domicile
+creerRencontre.coteExterieure=Côte extérieure
 creerRencontre.dateDebut=Début de la rencontre
 creerRencontre.dateFin=Fin de la rencontre
 
@@ -46,7 +48,7 @@ modifierRencontre.vainqueur=Vainqueur
 
 
 pari.titre.onglet=Pari
-pari.titre=Faites vos paris
+pari.titre=Faites vos paris!
 pari.somme=Somme pariée - Montant maxi: 
 pari.vainqueur=Choix de l'équipe 
 error.pari.somme.excessive=La somme pariée est supérieure au montant maximum
@@ -54,9 +56,9 @@ error.pari.somme.excessive=La somme pariée est supérieure au montant maximum
 
 menuAdmin.sport=Sport
 menuAdmin.equipeDomicile=Equipe Domicile
-menuAdmin.coteDomicile=Côte
+menuAdmin.coteDomicile=Côte domicile
 menuAdmin.equipeExterieure=Equipe Extérieure
-menuAdmin.coteExterieure=Côte
+menuAdmin.coteExterieure=Côte extérieure
 menuAdmin.dates=Dates
 menuAdmin.vainqueur=Vainqueur
 menuAdmin.score=Score
@@ -84,4 +86,5 @@ rencontrePariees.resuPari=Résultat du pari
 rencontrePariees.gagne=Pari gagné! :)
 rencontrePariees.perdu=Pari perdu :(
 rencontrePariees.gainPari=Vos gains
-rencontrePariees.devise=\u20AC
+rencontrePariees.devise=euros
+rencontrePariees.vide=Résultats en cours
