10/07 commi fin journée

--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -7,7 +7,7 @@ authentification.logout=Vous avez été déconnecté
 error.authentification.email.doublon=Cet email existe déjà
 authentification.retour=Retour à l'accueil
 
-inscription.creation=Création de compte
+inscription.creation=Création/Modification de compte
 
 client.nom=Nom
 client.prenom=Prenom
