Suppression de la rencontre impossible si paris en cours

--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -63,6 +63,8 @@ menuAdmin.score=Score
 menuAdmin.encours=En cours
 menuAdmin.nondebute=Non débutée
 menuAdmin.enattente=En attente du résultat
+menuAdmin.nonSupprime=La rencontre n'a pas pu être supprimée car il existe des paris en cours.
+menuAdmin.supprime=La rencontre a été supprimée.
 
 
 error.authentification.email.doublon=Cet email existe déjà
