Commit Ajout "à la volée " du Gain potentiel lors de la prise de Pari

--- a/ProjetWinBet/src/messages_fr.properties
+++ b/ProjetWinBet/src/messages_fr.properties
@@ -52,6 +52,7 @@ pari.titre=Faites vos paris!
 pari.somme=Somme pariée - Montant maxi: 
 pari.vainqueur=Choix de l'équipe 
 error.pari.somme.excessive=La somme pariée est supérieure au montant maximum
+pariRencontre.gain=Avec ce pari vos gains potentiels seront de :
 
 
 menuAdmin.sport=Sport
@@ -88,3 +89,4 @@ rencontrePariees.perdu=Pari perdu :(
 rencontrePariees.gainPari=Vos gains
 rencontrePariees.devise=euros
 rencontrePariees.vide=Résultats en cours
+
